# 5-day-ai-agents-intensive-google

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  PROJECT_STRUCTURE.md  README.md  SECURITY.md  agents-to-build.md  create_countdown_branches.py  pyproject.toml  requirements.txt
1-First Agent/: agent.py
2-WebSearch Agent/: agent.py
3-CustomTool Agent/: agent.py  tools.py
4-CustomTool Agent with memory/: agent.py  tools.py
5- Multi-agent/: agent.py
6- code-agent/: agent.py
7-wikipidia-agent/: agent.py
8-finetuning data generator/: agent.py
9-AutoScraper Agents/: __init__.py  requirements.txt
9-AutoScraper Agents/analyst/: __init__.py  agent.py
9-AutoScraper Agents/orchestrator/: agent.py
9-AutoScraper Agents/shared/: config.py  tools.py
common/base/: agent.py
common/config/: settings.py
day1/model_based/: agent.py
day1/simple_reflex/: agent.py
day2/code_execution/: agent.py
day2/web_search/: agent.py
day3/conversational/: agent.py
day3/knowledge_base/: agent.py
day4/ab_testing/: agent.py
day4/self_monitoring/: agent.py
day5/orchestrator/: agent.py
day5/research_system/: system.py
day6/: README.md
day6/google_cloud_ml/: comprehensive_demo.py  demo.py  language_agent.py  speech_agent.py  translate_agent.py  tts_agent.py  video_agent.py  (+1 more)
day7/: COMPLETE.md  COMPLETION_REPORT.md  FINAL_COUNT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MASTER_SUMMARY.md  PROJECT_SUMMARY.md  README.md  VERIFICATION.md  agent_anatomy.py  integration_example.py  key_capabilities.py  test_all.py
(+13 files in other folders)
